py26-tables: update to version 2.2. closes #23924
git-svn-id: https://svn.macports.org/repository/macports/trunk@70337 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py26-tables/Portfile
+++ b/dports/python/py26-tables/Portfile
@@ -4,7 +4,7 @@ PortSystem         1.0
 PortGroup          python26 1.0
 
 name               py26-tables
-version            2.1.2
+version            2.2
 categories-append  python science
 platforms          darwin
 maintainers        mmoll openmaintainer
@@ -18,14 +18,16 @@ homepage           http://www.pytables.org/
 master_sites       ${homepage}download/stable/
 distname           tables-${version}
 
-checksums           md5     0033be22577d76fd1689a77afb9975da \
-                    sha1    545cc16491d37e2f6b8ce10bc8bdfa559b174e2e \
-                    rmd160  09bfb73e9252baa34aa40274a0b07f6c6cc60d70
+checksums           md5     b95ebb5e501296f30fd75254a689d57b \
+                    sha1    1a1c3e01b99fb264ae5fce1fa2950c25e6dcb516 \
+                    rmd160  6a15629c6d08131589e1825d1a237f2d5c887aab
 depends_lib-append port:hdf5-18 \
                    port:py26-numpy \
+				   port:py26-numexpr \
                    port:zlib \
                    port:bzip2 \
-                   port:py26-scientific
+                   port:py26-scientific \
+				   port:py26-cython
 
 build.target       build_ext
 build.args         --inplace \
@@ -35,8 +37,8 @@ build.args         --inplace \
 destroot.args      --hdf5=${prefix} \
                    --bzip2=${prefix}
 
-variant lzo description "Use lzo compression library" {
-  depends_lib-append    port:lzo
+variant lzo description "Use lzo2 compression library" {
+  depends_lib-append    port:lzo2
   build.args-append     --lzo=${prefix}
   destroot.args-append  --lzo=${prefix}
 }
