--- a/dports/irc/bahamut/Portfile
+++ b/dports/irc/bahamut/Portfile
@@ -2,8 +2,7 @@
 PortSystem 1.0
 name		bahamut
 conflicts	whois
-version		1.8.6
-revision        1
+version		1.8.9
 description	Bahamut is an Internet Relay Chat Daemon (IRCd) designed for DALnet.
 long_description	${description}
 maintainers	nomaintainer
@@ -13,9 +12,9 @@ homepage	http://bahamut.dal.net/
 distname	${name}-${version}-release
 master_sites	${homepage}/download ftp://ftp.dal.net/dalnet/server/bahamut/
 
-checksums	md5     a814a4e0ff1fabcf026ea8574b4a1e20 \
-		sha1    b08dfcf1e36e26029ab3254e274ce67fa02f81b2 \
-		rmd160  ef1524485f3f50f78a80516577a2ac10a0ded2b5
+checksums	md5     e1a2b6ffab3c7a88bdd0a3561da4e5ee \
+		sha1    64b783ed04983bb1f5ea2b75b3a479888413fb3e \
+		rmd160  35b61b35aac8240b984c2a91ac16dcc47fb1a29b
 
 patchfiles	patch-support.c
 
@@ -38,9 +37,8 @@ pre-build {
 	reinplace "s|INSTALL_DIR=${prefix}|INSTALL_DIR=${destroot}${prefix}|g" \
 		${worksrcpath}/doc/Makefile
 }
+
 post-destroot {
-	file mkdir ${destroot}${prefix}/etc
-	file mkdir ${destroot}${prefix}/bin
 	file rename ${destroot}${prefix}/convert_conf ${destroot}${prefix}/bin/
 	file rename ${destroot}${prefix}/mkpasswd ${destroot}${prefix}/bin/
 	file rename ${destroot}${prefix}/ircd ${destroot}${prefix}/bin/
@@ -48,6 +46,9 @@ post-destroot {
 	file rename ${destroot}${prefix}/opers.txt ${destroot}${prefix}/etc/
 	file rename ${destroot}${prefix}/template.conf ${destroot}${prefix}/etc/
 	file rename ${destroot}${prefix}/reference.conf ${destroot}${prefix}/etc/
+	file rename ${destroot}${prefix}/make-cert.cnf ${destroot}${prefix}/etc/
+	file rename ${destroot}${prefix}/make-cert.sh ${destroot}${prefix}/bin/
+	reinplace "s|${destroot}${prefix}|${prefix}/etc|g" ${destroot}${prefix}/bin/make-cert.sh
 }	
 
 livecheck.type	regex
