oracle-instantclient: fix build when universal_archs does not contain the architectures being built; see #25966
git-svn-id: https://svn.macports.org/repository/macports/trunk@70340 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/databases/oracle-instantclient/Portfile
+++ b/dports/databases/oracle-instantclient/Portfile
@@ -61,12 +61,15 @@ if {"powerpc" == ${os.arch}} {
     variant universal {}
 }
 
+# merge() requires universal_archs to be set correctly. Since we use merge()
+# even when not building universal we must always set universal_archs correctly.
 if {[variant_isset universal]} {
-#    set my_requested_archs ${configure.universal_archs}
-    set my_requested_archs {x86_64 i386}
+    # The only supported universal build is x86_64 i386.
+    configure.universal_archs x86_64 i386
 } else {
-    set my_requested_archs ${configure.build_arch}
+    configure.universal_archs ${configure.build_arch}
 }
+set my_requested_archs ${configure.universal_archs}
 
 distfiles
 foreach my_requested_arch ${my_requested_archs} {
