oracle-instantclient: use notes
git-svn-id: https://svn.macports.org/repository/macports/trunk@70341 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/databases/oracle-instantclient/Portfile
+++ b/dports/databases/oracle-instantclient/Portfile
@@ -191,11 +191,11 @@ destroot {
     ln -s libocci.dylib.10.1 ${destroot}${lib_dir}/libocci.dylib
 }
 
-post-activate {
-    ui_msg "To use ${name},"
-    ui_msg "export DYLD_LIBRARY_PATH=${prefix}/lib/oracle"
-    ui_msg "in your environment."
-}
+notes "
+To use ${name},
+export DYLD_LIBRARY_PATH=${prefix}/lib/oracle
+in your environment.
+"
 
 livecheck.type          regex
 livecheck.url           ${homepage}htdocs/intel_macsoft.html
