oracle-instantclient: clarify comment
git-svn-id: https://svn.macports.org/repository/macports/trunk@70342 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/databases/oracle-instantclient/Portfile
+++ b/dports/databases/oracle-instantclient/Portfile
@@ -175,7 +175,8 @@ destroot {
                     ${my_destroot}${lib_dir}
                 
                 # You would think the includes should go in ${prefix}/include/oracle, but
-                # the instantclient layout wants it in ${prefix}/lib/oracle/sdk/include
+                # the "instantclient layout" dictates they must be in ${prefix}/lib/oracle/sdk/include;
+                # ports like php5-oracle will expect them there.
                 xinstall -d ${my_destroot}${lib_dir}/sdk
                 copy ${my_worksrcpath}/sdk/include ${my_destroot}${lib_dir}/sdk
             }
