cxref: update to 1.6c
git-svn-id: https://svn.macports.org/repository/macports/trunk@70343 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/cxref/Portfile
+++ b/dports/devel/cxref/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 
 name			cxref
-version			1.6b
+version			1.6c
 categories		devel
 platforms		darwin
 maintainers		nomaintainer
@@ -24,9 +24,9 @@ master_sites	http://www.gedanken.demon.co.uk/download-cxref/ \
 				ftp://ftp.cs.tu-berlin.de/pub/linux/Mirrors/sunsite.unc.edu/devel/lang/c/
 extract.suffix	.tgz
 
-checksums		md5     c606d8a701cf05c47fec977aa6a3cfde \
-				sha1    b036b4f744dafca3091eee51c20c71ac57017c51 \
-				rmd160  8cb5d13b58749714b14bd57dc8085c841d7f8772
+checksums		md5     5857b9cc313cab8c8054215791b21b47 \
+				sha1    cc51b9296353a85eb371871e9fef8969cf866a5b \
+				rmd160  33d1df38a26eb4319cd38bada25662ccb66987df
 
 depends_build	bin:bison:bison
 
