camlp5: update to 5.14, disable universal
git-svn-id: https://svn.macports.org/repository/macports/trunk@70344 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/camlp5/Portfile
+++ b/dports/lang/camlp5/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 
 name                camlp5
-version             5.13
+version             5.14
 categories          lang
 platforms           darwin
 maintainers         nomaintainer
@@ -23,9 +23,9 @@ long_description    Camlp5 is a preprocessor and pretty-printer for \
 homepage            http://pauillac.inria.fr/~ddr/camlp5/
 master_sites        ${homepage}distrib/src/
 
-checksums           md5     f205d624e890761d3526eaf709071039 \
-                    sha1    b7aba330497a47d99efae8fb0646f9f86bbaef0c \
-                    rmd160  a648e0c381d0778ec8e5371c685a495bccb44b6b
+checksums           md5     dacee4ab14b4ba23ff7c5dc936ef7c3d \
+                    sha1    cae1cb1dfa506f640393c28d9b510a03f947ef9d \
+                    rmd160  0643a1fcf78d4848fd7090d105911dc43990eb66
 
 depends_build       port:ocaml
 extract.suffix      .tgz
@@ -33,6 +33,9 @@ configure.pre_args  --prefix "${prefix}" \
                     --mandir "${prefix}/share/man"
 build.target        world.opt
 use_parallel_build  no
+
+# ocaml is not universal
+universal_variant   no
 
 livecheck.type  regex
 livecheck.url   [lindex ${master_sites} 0]
