chemtool: update to 1.6.12, fix mtree violation by manpages, disable universal
git-svn-id: https://svn.macports.org/repository/macports/trunk@70345 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/science/chemtool/Portfile
+++ b/dports/science/chemtool/Portfile
@@ -3,19 +3,25 @@
 PortSystem          1.0
 
 name                chemtool
-version             1.6.11
+version             1.6.12
 categories          science
 platforms           darwin
 maintainers         nomaintainer
 description         Chemtool is a small program for drawing chemical structures
 long_description    ${description}
 
-homepage            http://ruby.chemie.uni-freiburg.de/~martin/chemtool/chemtool.html
-master_sites        http://ruby.chemie.uni-freiburg.de/~martin/chemtool/
-checksums           md5 25c15b2ee73fc89b4e34cafd57daca31 \
-                    sha1 f4c50264b1499bdac15854e4bffde1a9d85668b3 \
-                    rmd160 46aa3fc5ff8929d5f2bfe8e14a62db965cf23f47
+homepage            http://ruby.chemie.uni-freiburg.de/~martin/chemtool/
+master_sites        ${homepage}
+
+checksums           md5     f9e0633cbda09fcfe5a4ea4c56bcd460 \
+                    sha1    23ab6555fcad2b85c3ecdde7ee4b62f1de1c7acc \
+                    rmd160  b3501d4af20164e6ec3227970d6daf2950e5506c
 
 depends_lib         port:gtk2 \
                     port:openbabel \
                     port:transfig
+
+# transfig is not universal
+universal_variant   no
+
+configure.args      --mandir=${prefix}/share/man
