transfig: update to 3.2.5d; see #25964
git-svn-id: https://svn.macports.org/repository/macports/trunk@70346 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/print/transfig/Portfile
+++ b/dports/print/transfig/Portfile
@@ -2,7 +2,7 @@
 
 PortSystem			1.0
 name				transfig
-version				3.2.5c
+version				3.2.5d
 
 description			Tools to convert Xfig's .fig files
 long_description	TransFig is a set of tools for creating TeX documents \
@@ -17,9 +17,9 @@ maintainers			nomaintainer
 homepage			http://xfig.org/
 master_sites		sourceforge:mcj
 distname			${name}.${version}
-checksums			md5     0cc55ed6b4ae67a3e610e501acd694f9 \
-					sha1    20013b350e81400943cd91744173445d7bd4d98e \
-					rmd160  f757857945341093b03f3dce4745c1c131c933fb
+checksums			md5     f9eac7f265668ecbfda6aaf7581989ad \
+					sha1    90ff277cc9b3fa0d0313052fcf5e3ffad8652abc \
+					rmd160  6d6aff522bd9e886029bf317e7b9dcd495a5c0ef
 depends_lib			port:libpng \
 					port:xpm
 depends_run			port:netpbm
