--- a/dports/graphics/xfig/Portfile
+++ b/dports/graphics/xfig/Portfile
@@ -3,8 +3,7 @@
 PortSystem 1.0
 
 name			xfig
-version			3.2.5
-revision		8
+version			3.2.5b
 categories		graphics x11
 maintainers		nomaintainer
 description		Facility for Interactive Generation of figures under X11
@@ -19,29 +18,52 @@ platforms		darwin
 master_sites	sourceforge:mcj
 distname		${name}.${version}
 distfiles		${distname}.full${extract.suffix}
-checksums		md5 fae0c67a3951bd41c057deb63b6aa47a \
-				sha1 ce09d1a74dbddf0bc6b20fe9c558db584fbfed17 \
-				rmd160 0d5ada9e4b7f1dbd8dab8a09fd5946ec0211904c
+checksums		md5     499b0ce103a6b353453bf7e327f9a3b9 \
+				sha1    0730d7e6bc217c0de02682efb0078821512bb542 \
+				rmd160  aad4cfd808c116d34218e9890a898652e4f52ab6
 depends_lib		port:Xaw3d \
+				port:xorg-libXi \
 				port:libpng \
 				port:jpeg \
 				port:zlib
-depends_run		bin:gs:ghostscript \
-				bin:fig2dev:transfig
+depends_run		port:ghostscript \
+				port:transfig
 use_xmkmf		yes
 xmkmf.args-append	\
 				-DUseSeparateConfDir=NO -DBuildHtmlManPages=NO
 patchfiles		patch-Imakefile \
 				patch-fig.h \
                 patch-f_util.c \
-				patch-w_keyboard.c \
-                patch-w_library.c
+				patch-w_keyboard.c
+
+post-extract {
+	foreach d "${worksrcpath}/Doc ${worksrcpath}/Libraries" {
+		fs-traverse x ${d} {
+			if {[file isdirectory ${x}]} {
+				file attributes ${x} -permissions 0755
+			} else {
+				file attributes ${x} -permissions 0644
+			}
+		}
+	}
+}
 
 post-patch {
 	reinplace "s|__PREFIX|${prefix}|g" ${worksrcpath}/Imakefile
 	reinplace "s|__DESTROOT|${destroot}|g" ${worksrcpath}/Imakefile
 }
 destroot.target	install.all install.man
+post-destroot {
+    set docdir ${destroot}${prefix}/share/doc/${name}
+    xinstall -d ${docdir}
+    eval xinstall -m 644 -W ${worksrcpath} \
+        CHANGES \
+        Doc/TODO \
+        [glob ${worksrcpath}/Doc/FORMAT*] \
+        FIGAPPS \
+        README \
+        ${docdir}
+}
 
 livecheck.type	regex
 livecheck.regex	{>Xfig/Transfig (.*) Download</a>}
