--- a/dports/graphics/xfig/Portfile
+++ b/dports/graphics/xfig/Portfile
@@ -4,6 +4,7 @@ PortSystem 1.0
 
 name			xfig
 version			3.2.5b
+revision		1
 categories		graphics x11
 maintainers		nomaintainer
 description		Facility for Interactive Generation of figures under X11
@@ -63,6 +64,13 @@ post-destroot {
         FIGAPPS \
         README \
         ${docdir}
+}
+
+platform darwin 10 {
+	# Fix font selection bug when w_fontpanel.o is compiled with optimization by gcc 4.2 (#25935)
+	pre-build {
+		system "cd ${worksrcpath} && ${build.cmd} CDEBUGFLAGS=-O0 w_fontpanel.o"
+	}
 }
 
 livecheck.type	regex
