ghostscript: apply upstream patch for bug   http://bugs.ghostscript.com/show_bug.cgi?id=691272 (gs produces incorrect pdf file), fixing bug #25909.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70349 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/print/ghostscript/Portfile
+++ b/dports/print/ghostscript/Portfile
@@ -5,7 +5,7 @@ PortGroup       muniversal 1.0
 
 name            ghostscript
 version         8.71
-revision        4
+revision        5
 categories      print
 maintainers     takanori openmaintainer
 description     GPL Ghostscript, An interpreter for PostScript and PDF
@@ -27,7 +27,8 @@ patchfiles      patch-base_unix-dll.mak.diff \
                 libpng14-compat.diff \
                 patch-psi_zfile.c.diff \
                 patch-Makefile.in.diff \
-                patch-doc_Use.htm.diff
+                patch-doc_Use.htm.diff \
+                patch-base_gsfcmap.c.diff
 checksums       ${distname}.tar.gz rmd160 efce74cf22cf99b2b1a145df466e79a86e3dfefb \
                 ghostscript-fonts-other-6.0.tar.gz rmd160 ab60dbf71e7d91283a106c3df381cadfe173082f \
                 mappingresources4pdf_2unicode-20091208.tar.Z rmd160 bc1b86e6a5f0e022f88070195eb3e01e167114a7 \
