--- a/dports/games/openmortal/Portfile
+++ b/dports/games/openmortal/Portfile
@@ -19,8 +19,11 @@ long_description        Mortal Szombat is a parody of the popular coin-up \
 
 homepage                http://openmortal.sourceforge.net/
 master_sites            sourceforge
-checksums               md5 95278382bb563906fce624d833a845cf
 use_bzip2               yes
+
+checksums               md5     95278382bb563906fce624d833a845cf \
+                        sha1    a7177012e1c0eb04f357aa9ff013e53c8f7b835c \
+                        rmd160  6a0fdd46445ed243db261227a93526b97c6f9d79
 
 depends_lib             path:lib/pkgconfig/sdl.pc:libsdl \
                         port:libsdl_mixer \
