openmortal: fix compilation problem with gcc 4.1+ (i.e. on Snow Leopard); see #25978
git-svn-id: https://svn.macports.org/repository/macports/trunk@70355 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/openmortal/Portfile
+++ b/dports/games/openmortal/Portfile
@@ -33,6 +33,8 @@ depends_lib             path:lib/pkgconfig/sdl.pc:libsdl \
                         port:freetype \
                         bin:perl:perl5
 
+patchfiles              openmortal-0.7-gcc41.patch
+
 configure.args          --enable-main \
                         --enable-characters \
                         --enable-additional \
@@ -45,7 +47,7 @@ platform darwin {
         reinplace "s/\r$//g" \
             ${worksrcpath}/src/gfx.cpp
     }
-    patchfiles          patch-gfx.cpp.diff \
+    patchfiles-append   patch-gfx.cpp.diff \
                         patch-sge_tt_text.cpp.diff
     post-destroot {
         xinstall -d -m 755 \
