lablgtk: disable universal
git-svn-id: https://svn.macports.org/repository/macports/trunk@70357 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/lablgtk/Portfile
+++ b/dports/x11/lablgtk/Portfile
@@ -19,6 +19,10 @@ checksums			md5 73a797e3a459190fdcaa8288935f6fb9 \
 					sha1 fe43512efdc7ab4e0dafb7dc8254a784857a1ade \
 					rmd160 27be7ff29fe4370bc9a1bbef8c0fa0db590f27c4
 depends_lib			bin:camlp4:ocaml lib:libgtk.1:gtk1
+
+# ocaml is not universal
+universal_variant	no
+
 configure {
 	system "cd ${worksrcpath} && make configure \
 		USE_DOTOPT=1 \
