--- a/dports/x11/lablgtk/Portfile
+++ b/dports/x11/lablgtk/Portfile
@@ -18,7 +18,7 @@ master_sites		http://wwwfun.kurims.kyoto-u.ac.jp/soft/olabl/dist/
 checksums			md5 73a797e3a459190fdcaa8288935f6fb9 \
 					sha1 fe43512efdc7ab4e0dafb7dc8254a784857a1ade \
 					rmd160 27be7ff29fe4370bc9a1bbef8c0fa0db590f27c4
-depends_lib			bin:camlp4:ocaml lib:libgtk.1:gtk1
+depends_lib			port:ocaml port:gtk1
 
 # ocaml is not universal
 universal_variant	no
