lablgtk: remove slash before ${prefix}
git-svn-id: https://svn.macports.org/repository/macports/trunk@70359 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/lablgtk/Portfile
+++ b/dports/x11/lablgtk/Portfile
@@ -32,8 +32,8 @@ configure {
 }
 build.target	opt
 post-destroot {
-	system "ranlib ${destroot}/${prefix}/lib/ocaml/lablgtk/lablgtk.a"
-	system "ranlib ${destroot}/${prefix}/lib/ocaml/lablgtk/liblablgtk.a"
+	system "ranlib ${destroot}${prefix}/lib/ocaml/lablgtk/lablgtk.a"
+	system "ranlib ${destroot}${prefix}/lib/ocaml/lablgtk/liblablgtk.a"
 }
 
 livecheck.type	regex
