lablgtk: get the path to the destroot out of the lablgtk script
git-svn-id: https://svn.macports.org/repository/macports/trunk@70361 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/lablgtk/Portfile
+++ b/dports/x11/lablgtk/Portfile
@@ -4,6 +4,7 @@ PortSystem			1.0
 
 name				lablgtk
 version				1.2.7
+revision			1
 categories			x11
 maintainers			nomaintainer
 description			Objective Caml interface to gtk+
@@ -34,6 +35,7 @@ build.target	opt
 post-destroot {
 	system "ranlib ${destroot}${prefix}/lib/ocaml/lablgtk/lablgtk.a"
 	system "ranlib ${destroot}${prefix}/lib/ocaml/lablgtk/liblablgtk.a"
+	reinplace "s|${destroot}${prefix}|${prefix}|g" ${destroot}${prefix}/bin/${name}
 }
 
 livecheck.type	regex
