lablgtk2: remove slash before ${ocaml_site_path}
git-svn-id: https://svn.macports.org/repository/macports/trunk@70362 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/lablgtk2/Portfile
+++ b/dports/x11/lablgtk2/Portfile
@@ -49,8 +49,8 @@ variant gtksourceview description "enable gtksourceview support" {
 
 post-destroot {
     set ocaml_site_path [exec ocamlfind printconf destdir]
-    file mkdir ${destroot}/${ocaml_site_path}/lablgtk2
-    file copy ${worksrcpath}/META ${destroot}/${ocaml_site_path}/lablgtk2
+    file mkdir ${destroot}${ocaml_site_path}/lablgtk2
+    file copy ${worksrcpath}/META ${destroot}${ocaml_site_path}/lablgtk2
 }
 
 livecheck.type    regex
