gtk1: change how distfiles are handled
git-svn-id: https://svn.macports.org/repository/macports/trunk@70363 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/gtk1/Portfile
+++ b/dports/x11/gtk1/Portfile
@@ -21,12 +21,12 @@ master_sites	gnome:sources/gtk+/1.2/ \
 		macports:lt:lt
 
 distname	gtk+-${version}
-set filename	gtk+-${version}${extract.suffix}
-distfiles	${filename} ltconfig13:lt ltmain13:lt
-checksums	gtk+-1.2.10.tar.gz md5 4d5cb2fc7fb7830e4af9747a36bfce20 \
+set source_distfile	[suffix ${distname}]
+distfiles	${source_distfile} ltconfig13:lt ltmain13:lt
+checksums	${source_distfile} md5 4d5cb2fc7fb7830e4af9747a36bfce20 \
 		ltconfig13 md5 ea53f42a550c9f9e653758a8ed91574e \
 		ltmain13 md5 e094ae92724c4015dbab97de151c2525
-extract.only	${filename}
+extract.only	${source_distfile}
 
 depends_lib	port:gettext port:glib1 port:xorg-libXext port:xorg-libXt
 
