--- a/dports/x11/gtk1/Portfile
+++ b/dports/x11/gtk1/Portfile
@@ -5,6 +5,7 @@ PortSystem 1.0
 
 name		gtk1
 version		1.2.10
+set branch	[join [lrange [split ${version} .] 0 1] .]
 revision	8
 categories	x11
 maintainers	nomaintainer
@@ -16,8 +17,8 @@ long_description This is GTK+ version 1.2.10. GTK+, which stands for \
 		 the Gimp ToolKit, is a library for creating graphical \
 		 user interfaces for the X Window System.
 
-master_sites	gnome:sources/gtk+/1.2/ \
-				ftp://ftp.gtk.org/pub/gtk/v1.2/ \
+master_sites	gnome:sources/gtk+/${branch}/ \
+				ftp://ftp.gtk.org/pub/gtk/v${branch}/ \
 		macports:lt:lt
 
 distname	gtk+-${version}
