--- a/dports/x11/gtk1/Portfile
+++ b/dports/x11/gtk1/Portfile
@@ -9,12 +9,11 @@ set branch	[join [lrange [split ${version} .] 0 1] .]
 revision	8
 categories	x11
 maintainers	nomaintainer
-description	Gimp Tool Kit
+description	Gimp ToolKit version 1
 homepage	http://www.gtk.org/
 platforms	darwin freebsd sunos
 
-long_description This is GTK+ version 1.2.10. GTK+, which stands for \
-		 the Gimp ToolKit, is a library for creating graphical \
+long_description GTK+, the Gimp ToolKit, is a library for creating graphical \
 		 user interfaces for the X Window System.
 
 master_sites	gnome:sources/gtk+/${branch}/ \
