--- a/dports/x11/gtk2/Portfile
+++ b/dports/x11/gtk2/Portfile
@@ -15,9 +15,8 @@ platforms       darwin
 description     Gimp ToolKit version 2
 
 long_description \
-    This is GTK+ version 2.x. GTK+, which stands for Gimp \
-    ToolKit, is a library for creating GUIs for the X Windows \
-    System.
+    GTK+, the Gimp ToolKit, is a library for creating graphical user \
+    interfaces for the X Window System.
 
 homepage        http://www.gtk.org/
 distname        gtk+-${version}
