mldonkey: add bzip2 dependency since "./configure --help" implies it will get used unless we disable it
git-svn-id: https://svn.macports.org/repository/macports/trunk@70366 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/mldonkey/Portfile
+++ b/dports/net/mldonkey/Portfile
@@ -31,6 +31,7 @@ use_bzip2		yes
 depends_lib		port:ocaml \
 				port:lablgtk \
 				port:expat \
+				port:bzip2 \
 				port:fontconfig \
 				port:freetype \
 				port:gd2 \
