mldonkey: also add dependency on "file" port since it will also get used
git-svn-id: https://svn.macports.org/repository/macports/trunk@70368 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/mldonkey/Portfile
+++ b/dports/net/mldonkey/Portfile
@@ -4,6 +4,7 @@ PortSystem 1.0
 
 name			mldonkey
 version			3.0.3
+revision		1
 categories		net
 maintainers		nomaintainer
 description		OCaml/GTK client for the eDonkey p2p network
@@ -31,6 +32,7 @@ depends_lib		port:ocaml \
 				port:lablgtk \
 				port:expat \
 				port:bzip2 \
+				port:file \
 				port:fontconfig \
 				port:freetype \
 				port:gd2 \
