mldonkey: use lablgtk2 to avoid current problems with gtk1 (see #24915)
git-svn-id: https://svn.macports.org/repository/macports/trunk@70369 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/mldonkey/Portfile
+++ b/dports/net/mldonkey/Portfile
@@ -4,7 +4,7 @@ PortSystem 1.0
 
 name			mldonkey
 version			3.0.3
-revision		1
+revision		2
 categories		net
 maintainers		nomaintainer
 description		OCaml/GTK client for the eDonkey p2p network
@@ -27,9 +27,22 @@ checksums		md5     b5b5252fe60b5ec52396c9f58b7cb577 \
 # ocaml is not universal
 universal_variant no
 
+pre-configure {
+	if {![file exists ${prefix}/lib/ocaml/lablgtk2/lablrsvg.a]} {
+		ui_error "${name} needs lablgtk2 to be installed with librsvg support."
+		ui_error "Please rebuild lablgtk2 using the command:"
+		ui_error ""
+		ui_error "    sudo port upgrade --enforce-variants lablgtk2 +rsvg"
+		ui_error ""
+		return -code error "incompatible lablgtk2 installation"
+	}
+}
+
+configure.args	--enable-gui=newgui2
+
 use_bzip2		yes
 depends_lib		port:ocaml \
-				port:lablgtk \
+				port:lablgtk2 \
 				port:expat \
 				port:bzip2 \
 				port:file \
