gtk1: work around build failure with gettext 0.18.x by disabling natural language support entirely for now; see #24915
git-svn-id: https://svn.macports.org/repository/macports/trunk@70370 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/gtk1/Portfile
+++ b/dports/x11/gtk1/Portfile
@@ -6,7 +6,7 @@ PortSystem 1.0
 name		gtk1
 version		1.2.10
 set branch	[join [lrange [split ${version} .] 0 1] .]
-revision	8
+revision	9
 categories	x11
 maintainers	nomaintainer
 description	Gimp ToolKit version 1
@@ -28,13 +28,13 @@ checksums	${source_distfile} md5 4d5cb2fc7fb7830e4af9747a36bfce20 \
 		ltmain13 md5 e094ae92724c4015dbab97de151c2525
 extract.only	${source_distfile}
 
-depends_lib	port:gettext port:glib1 port:xorg-libXext port:xorg-libXt
+depends_lib	port:glib1 port:xorg-libXext port:xorg-libXt
 
 patchfiles	patch-config.guess patch-config.sub \
 			patch-gtk.m4.diff
 
 configure.ccache    no
-configure.args	--disable-shm --with-locale --mandir=${prefix}/share/man \
+configure.args	--disable-nls --disable-shm --with-locale --mandir=${prefix}/share/man \
 		--infodir=${prefix}/share/info
 
 post-patch {
