pure-ffi: fix build with latest libffi
git-svn-id: https://svn.macports.org/repository/macports/trunk@70371 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/pure-ffi/Portfile
+++ b/dports/devel/pure-ffi/Portfile
@@ -25,8 +25,14 @@ checksums                       md5     3dbdd586dbb69a8603bb1bc4140f9d19 \
                                 sha1    280fb011a134ba58a1106830aa5e5a2ffc71551f \
                                 rmd160  4cad207b9dbc4c4b9c5ba04a864d6b526784f44c
 
+depends_build-append            port:pkgconfig
+
 depends_lib-append              port:libffi
 
 platform darwin {
     configure.cflags-append     -fno-common
+}
+
+pre-configure {
+    eval configure.cppflags-append [exec ${prefix}/bin/pkg-config libffi --cflags]
 }
