screen: use notes
git-svn-id: https://svn.macports.org/repository/macports/trunk@70372 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/screen/Portfile
+++ b/dports/sysutils/screen/Portfile
@@ -72,8 +72,6 @@ platform darwin 10 {
     patchfiles-append   patch-config.h.in patch-configure patch-pty.c patch-window.c patch-screen.c patch-process.c
 }
 
-post-install {
-ui_msg "===============================================================================\n"
-ui_msg "Any screens running before upgrading, will not be available, post-install.\n"
-ui_msg "===============================================================================\n"
-}
+notes "
+Any screens running before upgrading, will not be available, post-install.
+"
