games/freeciv* - update to 2.2.2, enable sound support by default; ticket #25987
git-svn-id: https://svn.macports.org/repository/macports/trunk@70373 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/freeciv-x11/Portfile
+++ b/dports/games/freeciv-x11/Portfile
@@ -2,10 +2,10 @@
 
 PortSystem          1.0
 name                freeciv-x11
-version             2.2.1
+version             2.2.2
 categories          games
 maintainers         nomaintainer
-description         A civilisation clone for X11
+description         A civilisation clone for X11 (with sound support)
 long_description \
    Freeciv is a Free and Open Source empire-building strategy game \
    inspired by the history of human civilization. The game commences in \
@@ -20,18 +20,20 @@ distname            freeciv-${version}
 dist_subdir         freeciv
 use_bzip2           yes
 
-checksums           md5     b43269e38ecd32cb09850778befc72b3 \
-                    sha1    f9d141a04e447a57f4fc001dbd789d92717735e4 \
-                    rmd160  d6d3fd99946e339b63b6e2cfc0e365e8228dc142
+checksums           md5     fae46199dedaf0decc3b82dc06f95624 \
+                    sha1    b306374d5e2e118393b23ff9a0b1a8d391b36c82 \
+                    rmd160  42714e95f1839592a79a2b60ee64bc58bbe512e8
 
 conflicts           freeciv
 
 depends_lib         port:gettext port:libiconv port:readline port:gtk2 \
-                    port:zlib
+                    port:zlib port:libsdl_mixer
 
-configure.args      --enable-client=gtk2 --with-readline --with-zlib \
+patchfiles          patch-client-options.c.diff
+
+configure.args      --enable-client=gtk2 --with-readline \
                     --enable-nls --with-libiconv-prefix=${prefix} \
-                    --mandir=${prefix}/share/man --disable-sdl-mixer
+                    --mandir=${prefix}/share/man --with-sdl-prefix=${prefix}
 
 livecheck.type      regex
 livecheck.url       ${homepage}
