--- a/dports/games/freeciv/Portfile
+++ b/dports/games/freeciv/Portfile
@@ -3,7 +3,7 @@
 
 PortSystem          1.0
 name                freeciv
-version             2.2.1
+version             2.2.2
 categories          games
 maintainers         nomaintainer
 description         An empire-building strategy game
@@ -19,18 +19,20 @@ homepage            http://www.freeciv.org/
 master_sites        sourceforge ftp://ftp.freeciv.org/freeciv/stable/
 use_bzip2           yes
 
-checksums           md5     b43269e38ecd32cb09850778befc72b3 \
-                    sha1    f9d141a04e447a57f4fc001dbd789d92717735e4 \
-                    rmd160  d6d3fd99946e339b63b6e2cfc0e365e8228dc142
+checksums           md5     fae46199dedaf0decc3b82dc06f95624 \
+                    sha1    b306374d5e2e118393b23ff9a0b1a8d391b36c82 \
+                    rmd160  42714e95f1839592a79a2b60ee64bc58bbe512e8
 
 conflicts           freeciv-x11
 
 depends_lib         port:freetype port:libpng port:libsdl port:libsdl_image \
                     port:libsdl_mixer port:readline port:libiconv port:zlib
 
-configure.args      --enable-client=sdl --with-readline --with-zlib \
+patchfiles          patch-client-options.c.diff
+
+configure.args      --enable-client=sdl --with-readline \
                     --enable-nls --with-libiconv-prefix=${prefix} \
-                    --with-sdl-prefix=${prefix} --mandir=${prefix}/share/man
+                    --mandir=${prefix}/share/man --with-sdl-prefix=${prefix}
 
 livecheck.type      regex
 livecheck.url       ${homepage}
