qtplay: use supported_archs, and fix build problem when the nonexistent universal variant is nevertheless requested
git-svn-id: https://svn.macports.org/repository/macports/trunk@70375 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/qtplay/Portfile
+++ b/dports/audio/qtplay/Portfile
@@ -35,19 +35,10 @@ use_configure           no
 configure.ldflags       -framework Carbon -framework QuickTime
 
 # Force 32-bit (#21115)
-if {${build_arch} == "x86_64"} {
-    configure.build_arch i386
-} elseif {${build_arch} == "ppc64"} {
-    configure.build_arch ppc
-}
-
-# Respect build_arch
-if {![variant_isset universal]} {
-    configure.ldflags-append ${configure.cc_archflags}
-}
+supported_archs         ppc i386
 
 build {
-    set cmd "cd ${worksrcpath} && ${configure.cc} -o ${name} [join ${configure.ldflags}] ${name}.c"
+    set cmd "cd ${worksrcpath} && ${configure.cc} -o ${name} ${configure.ldflags} ${configure.cc_archflags} ${name}.c"
     ui_debug ${cmd}
     system ${cmd}
 }
