qtplay: add sha1 and rmd160 checksums
git-svn-id: https://svn.macports.org/repository/macports/trunk@70376 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/qtplay/Portfile
+++ b/dports/audio/qtplay/Portfile
@@ -22,7 +22,11 @@ long_description \
 homepage                http://rainbowflight.googlepages.com/
 master_sites            ${homepage}
 distname                ${name}${version}
-checksums               md5 f6cb47521afbfc5b40efdd2d8433830d
+
+checksums               md5     f6cb47521afbfc5b40efdd2d8433830d \
+                        sha1    fd7394675c972377a48c2ff8e0a774853c0be6a3 \
+                        rmd160  4c97ee8d38537f52547cb7a4d31eced0a93f2054
+
 use_parallel_build      no
 
 extract.mkdir           yes
