--- a/dports/graphics/ImageMagick/Portfile
+++ b/dports/graphics/ImageMagick/Portfile
@@ -127,45 +127,38 @@ test.env                    DYLD_LIBRARY_PATH=${worksrcpath}/magick/.libs
 variant graphviz description {Support Graphviz} {
     depends_lib-append      path:bin/dot:graphviz
     archcheck.files-append  lib/libgvc.dylib
-    configure.args-delete   --without-gvc
-    configure.args-append   --with-gvc
+    configure.args-replace  s|--without-gvc|--with-gvc|
 }
 
 variant gs description {Include Ghostscript library support} {
     depends_lib-append      port:ghostscript
     archcheck.files-append  lib/libgs.dylib
-    configure.args-delete   --without-gslib
-    configure.args-append   --with-gslib
+    configure.args-replace  s|--without-gslib|--with-gslib|
 }
 
 variant hdri description {Support High Dynamic Range Imaging using OpenEXR} {
     depends_lib-append      port:openexr
     archcheck.files-append  lib/libIlmImf.dylib
-    configure.args-delete   --without-openexr \
-                            --disable-hdri
-    configure.args-append   --with-openexr \
-                            --enable-hdri
+    configure.args-replace  s|--without-openexr|--with-openexr|
+    configure.args-replace  s|--disable-hdri|--enable-hdri|
 }
 
 variant jbig description {Support JBIG} {
     depends_lib-append      port:jbigkit
     archcheck.files-append  lib/libjbig.dylib
-    configure.args-delete   --without-jbig
-    configure.args-append   --with-jbig
+    configure.args-replace  s|--without-jbig|--with-jbig|
 }
 
 variant jpeg2 description {Support JPEG-2000 using JasPer} {
     depends_lib-append      port:jasper
     archcheck.files-append  lib/libjasper.dylib
-    configure.args-delete   --without-jp2
-    configure.args-append   --with-jp2
+    configure.args-replace  s|--without-jp2|--with-jp2|
 }
 
 variant lqr description {Support Liquid Rescale (experimental)} {
     depends_lib-append      port:liblqr
     archcheck.files-append  lib/liblqr-1.dylib
-    configure.args-delete   --without-lqr
-    configure.args-append   --with-lqr
+    configure.args-replace  s|--without-lqr|--with-lqr|
 }
 
 variant mpeg description {Support MPEG-1 and MPEG-2 video} {
@@ -181,14 +174,12 @@ variant no_x11 {
                             port:xorg-libXt
     archcheck.files-delete  lib/libXext.dylib \
                             lib/libXt.dylib \
-    configure.args-delete   --with-x
-    configure.args-append   --without-x
+    configure.args-replace  s|--with-x|--without-x|
 }
 
 variant perl description {Install PerlMagick} {
     depends_lib-append      path:bin/perl:perl5
-    configure.args-delete   --without-perl
-    configure.args-append   --with-perl=${prefix}/bin/perl
+    configure.args-replace  s|--without-perl|--with-perl=${prefix}/bin/perl|
     post-destroot {
         foreach packlist [exec find ${destroot} -name .packlist] {
             ui_info "Fixing packlist ${packlist}"
@@ -217,15 +208,13 @@ if {![variant_isset q8] && ![variant_isset q32]} {
 variant rsvg description {Support SVG using librsvg} {
     depends_lib-append      port:librsvg
     archcheck.files-append  lib/librsvg-2.dylib
-    configure.args-delete   --without-rsvg
-    configure.args-append   --with-rsvg
+    configure.args-replace  s|--without-rsvg|--with-rsvg|
 }
 
 variant wmf description {Support the Windows Metafile Format} {
     depends_lib-append      port:libwmf
     archcheck.files-append  lib/libwmf.dylib
-    configure.args-delete   --without-wmf
-    configure.args-append   --with-wmf
+    configure.args-replace  s|--without-wmf|--with-wmf|
 }
 
 livecheck.version           ${reasonable_version}
