wget: no_ssl variant is out, default ssl variant is in
git-svn-id: https://svn.macports.org/repository/macports/trunk@70379 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/wget/Portfile
+++ b/dports/net/wget/Portfile
@@ -5,7 +5,7 @@ PortGroup               muniversal 1.0
 
 name                    wget
 version                 1.12
-revision        1
+revision                2
 categories              net www
 maintainers             ryandesign
 license                 GPLv3
@@ -29,7 +29,7 @@ checksums \
     rmd160  232d0aa6fb36731c162d2b7374aa9ab59e671b7d
 
 configure.args \
-    --with-libssl-prefix=${prefix}
+    --without-ssl
 
 depends_build \
     bin:makeinfo:texinfo \
@@ -37,12 +37,11 @@ depends_build \
 
 depends_lib \
     port:libidn \
-    port:openssl \
     port:gettext
 
 # So that +universal can use gettext and openssl on Tiger; see #18276.
 configure.ldflags-append        -liconv -lintl
-if {![variant_isset no_ssl]} {
+if {[variant_isset ssl]} {
     depends_build-append        port:pkgconfig
     pre-configure {
         configure.ldflags-append    [exec ${prefix}/bin/pkg-config --libs libssl]
@@ -56,11 +55,12 @@ variant test {
     test.target             check
 }
 
-variant no_ssl description {Build without SSL support} {
-    depends_lib-delete      port:openssl
-    configure.args-append   --without-ssl
-    configure.args-delete   --with-libssl-prefix=${prefix}
+variant ssl description {Build with SSL support} {
+    depends_lib-append      port:openssl
+    configure.args-replace  s|--without-ssl|--with-libssl-prefix=${prefix}|
 }
+
+default_variants            +ssl
 
 patchfiles \
     patch-prefix.diff
