wget: handle upgrades for those who were using the +no_ssl variant
git-svn-id: https://svn.macports.org/repository/macports/trunk@70380 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/wget/Portfile
+++ b/dports/net/wget/Portfile
@@ -60,7 +60,13 @@ variant ssl description {Build with SSL support} {
     configure.args-replace  s|--without-ssl|--with-libssl-prefix=${prefix}|
 }
 
-default_variants            +ssl
+# Remove this variant later.
+variant no_ssl description {Build without SSL support} {}
+if {[variant_isset no_ssl]} {
+    default_variants        -ssl
+} else {
+    default_variants        +ssl
+}
 
 patchfiles \
     patch-prefix.diff
