--- a/dports/net/wget/Portfile
+++ b/dports/net/wget/Portfile
@@ -55,13 +55,13 @@ variant test {
     test.target             check
 }
 
-variant ssl description {Build with SSL support} {
+variant ssl conflicts no_ssl description {Build with SSL support} {
     depends_lib-append      port:openssl
     configure.args-replace  s|--without-ssl|--with-libssl-prefix=${prefix}|
 }
 
 # Remove this variant later.
-variant no_ssl description {Build without SSL support} {}
+variant no_ssl conflicts ssl description {Build without SSL support} {}
 if {[variant_isset no_ssl]} {
     default_variants        -ssl
 } else {
