pure, pure-devel: use depends_run-replace instead of -delete and -append
git-svn-id: https://svn.macports.org/repository/macports/trunk@70382 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/pure/Portfile
+++ b/dports/lang/pure/Portfile
@@ -45,8 +45,7 @@ depends_run \
     path:bin/w3m:w3m
 
 platform macosx {
-    depends_run-delete  path:bin/w3m:w3m
-    depends_run-append  path:bin/openbrowser:openbrowser
+    depends_run-replace s|path:bin/w3m:w3m|path:bin/openbrowser:openbrowser|
     patchfiles-append   patch-openbrowser.diff
 }
 
