bzip2: use patchfiles-replace instead of -delete and -append
git-svn-id: https://svn.macports.org/repository/macports/trunk@70384 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/archivers/bzip2/Portfile
+++ b/dports/archivers/bzip2/Portfile
@@ -32,8 +32,7 @@ patchfiles \
     patch-Makefile-so.diff
 
 platform darwin {
-    patchfiles-delete   patch-Makefile-so.diff
-    patchfiles-append   patch-Makefile-dylib.diff
+    patchfiles-replace  s|patch-Makefile-so.diff|patch-Makefile-dylib.diff|
 
     post-patch {
     reinplace "s|__MacPorts_Version__|${version}|g" \
