--- a/dports/math/qrupdate/Portfile
+++ b/dports/math/qrupdate/Portfile
@@ -6,7 +6,7 @@ PortGroup           muniversal 1.0
 
 name                qrupdate
 version             1.1.1
-revision            1
+revision            2
 categories          math
 maintainers         nomaintainer
 description         library for fast updates of QR and Cholesky decompositions
@@ -64,6 +64,13 @@ post-configure {
     }
 }
 
+variant accelerate description {build with Accelerate framework} {
+    depends_lib-delete      port:atlas
+    build.args          PREFIX=${prefix} BLAS="-framework Accelerate" LAPACK="-framework Accelerate"
+    destroot.args       PREFIX=${prefix} BLAS="-framework Accelerate" LAPACK="-framework Accelerate"
+    test.args           PREFIX=${prefix} BLAS="-framework Accelerate" LAPACK="-framework Accelerate"
+}
+
 variant g95 conflicts gcc43 gcc44 universal description {build with g95} {
     depends_build-append    port:g95
     post-patch {
@@ -88,6 +95,10 @@ variant gcc44 conflicts g95 gcc43 description {build with gcc44 fortran} {
 
 if {![variant_isset gcc43] && ![variant_isset gcc44] && ![variant_isset g95]} {
     default_variants +gcc44
+}
+
+if {[variant_isset g95]} {
+    default_variants +accelerate
 }
 
 test.run yes
