bzip2: whitespace changes / reformatting only
git-svn-id: https://svn.macports.org/repository/macports/trunk@70387 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/archivers/bzip2/Portfile
+++ b/dports/archivers/bzip2/Portfile
@@ -9,44 +9,26 @@ platforms               darwin freebsd linux sunos
 categories              archivers sysutils
 maintainers             ryandesign openmaintainer
 license                 BSD
-use_configure           no
-use_parallel_build      yes
+
+description             compression library and tools
+
+long_description        ${name} is a freely available, patent free, \
+                        high-quality data compressor.
+
 homepage                http://www.bzip.org/
 master_sites            ${homepage}${version}
 
-description \
-    compression library and tools
+checksums               md5     3c15a0c8d1d3ee1c46a1634d00617b1a \
+                        sha1    8b02713ea0c8eb501cc8bdac4432d7f29700f767 \
+                        rmd160  2b31a22138e3914d82a656fee28e2bf029cbc3d4
 
-long_description \
-    ${name} is a freely available, patent free, high-quality data \
-    compressor.
+patchfiles              patch-Makefile-man.diff \
+                        patch-Makefile-links.diff \
+                        patch-Makefile-so.diff
 
-checksums \
-    md5 3c15a0c8d1d3ee1c46a1634d00617b1a \
-    sha1 8b02713ea0c8eb501cc8bdac4432d7f29700f767 \
-    rmd160 2b31a22138e3914d82a656fee28e2bf029cbc3d4
+use_configure           no
 
-patchfiles \
-    patch-Makefile-man.diff \
-    patch-Makefile-links.diff \
-    patch-Makefile-so.diff
-
-platform darwin {
-    patchfiles-replace  s|patch-Makefile-so.diff|patch-Makefile-dylib.diff|
-
-    post-patch {
-    reinplace "s|__MacPorts_Version__|${version}|g" \
-        ${worksrcpath}/Makefile
-    reinplace "s|__MacPorts_Compatibility_Version__|[join [lrange [split ${version} .] 0 1] .]|g" \
-        ${worksrcpath}/Makefile
-    }
-
-    post-destroot {
-        ln -s libbz2.${version}.dylib ${destroot}${prefix}/lib/libbz2.[join [lrange [split ${version} .] 0 1] .].dylib
-        ln -s libbz2.${version}.dylib ${destroot}${prefix}/lib/libbz2.[join [lrange [split ${version} .] 0 0] .].dylib
-        ln -s libbz2.${version}.dylib ${destroot}${prefix}/lib/libbz2.dylib
-    }
-}
+use_parallel_build      yes
 
 variant universal {}
 pre-build {
@@ -60,3 +42,18 @@ pre-build {
 }
 
 destroot.destdir        PREFIX=${destroot}${prefix}
+
+platform darwin {
+    patchfiles-replace  s|patch-Makefile-so.diff|patch-Makefile-dylib.diff|
+
+    post-patch {
+        reinplace "s|__MacPorts_Version__|${version}|g" ${worksrcpath}/Makefile
+        reinplace "s|__MacPorts_Compatibility_Version__|[join [lrange [split ${version} .] 0 1] .]|g" ${worksrcpath}/Makefile
+    }
+
+    post-destroot {
+        ln -s libbz2.${version}.dylib ${destroot}${prefix}/lib/libbz2.[join [lrange [split ${version} .] 0 1] .].dylib
+        ln -s libbz2.${version}.dylib ${destroot}${prefix}/lib/libbz2.[join [lrange [split ${version} .] 0 0] .].dylib
+        ln -s libbz2.${version}.dylib ${destroot}${prefix}/lib/libbz2.dylib
+    }
+}
