--- a/dports/net/rsync/Portfile
+++ b/dports/net/rsync/Portfile
@@ -60,7 +60,7 @@ variant rsyncd description {Installs rsyncd.conf and a StartupItem for rsyncd} {
     post-install {
         ui_msg "****************************************************************"
         ui_msg "*                                                              *"
-        ui_msg "* To use the rsyncd server you must rename                     *"
+        ui_msg "* To use the rsyncd server you must copy                       *"
         ui_msg "* ${prefix}/etc/rsyncd.conf.example to rsyncd.conf and add    *"
         ui_msg "* your modules there. See 'man rsyncd.conf' for more           *"
         ui_msg "* information.                                                 *"
