Change the hs-hashed-storage dependency to hs-hashed-storage-04. Required since this version of darcs will not build against version 0.5.x of hashed-storage.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70395 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/darcs/Portfile
+++ b/dports/devel/darcs/Portfile
@@ -21,14 +21,14 @@ checksums	md5     1cfd8cad4ec09d88e081df3b56f9eca3 \
 		sha1    fa140c035514bee9531d56dde0e7ae1cb245d993 \
 		rmd160  5a909b22a1aab1f8acf07f65dfd3f5f12e6de312
 
-depends_build	port:hs-platform-mtl	\
-		port:hs-platform-html	\
-		port:hs-platform-parsec	\
+depends_build	port:hs-platform-mtl		\
+		port:hs-platform-html		\
+		port:hs-platform-parsec		\
 		port:hs-platform-regex-compat	\
-		port:hs-haskeline	\
-		port:hs-hashed-storage	\
-		port:hs-utf8-string	\
-		port:hs-zlib		\
+		port:hs-haskeline		\
+		port:hs-hashed-storage-04	\
+		port:hs-utf8-string		\
+		port:hs-zlib			\
 		port:hs-HTTP
 depends_lib	port:gmp
 
