Change the autoconf dependency to autoconf263, which is known to work.  Should fix the random breakage that has accompanied recent autoconf updates.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70396 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/ghc/Portfile
+++ b/dports/lang/ghc/Portfile
@@ -6,7 +6,7 @@ PortGroup	archcheck 1.0
 name		ghc
 set canonicalname	ghc
 version		6.10.4
-revision	3
+revision	4
 categories	lang haskell
 maintainers	gwright
 platforms	darwin
@@ -63,7 +63,7 @@ patchfiles	patch-configure.ac.diff			\
 		patch-utils-genapply-Makefile.diff	\
 		patch-utils-genprimopcode-Makefile.diff
 
-depends_build	port:autoconf
+depends_build	port:autoconf263
 depends_lib	port:gmp	\
 		port:ncursesw	\
 		port:libiconv
@@ -325,7 +325,7 @@ post-patch	{
 
 
 pre-configure	{
-		system "${prefix}/bin/autoreconf ${worksrcpath}"
+		system "${prefix}/bin/autoreconf263 ${worksrcpath}"
 
 		set cfg [open "${workpath}/ghc-bootstrap/bin/ghc-pkg" w]
 		puts $cfg "#!/bin/sh"
