php5-xcache: fix livecheck
git-svn-id: https://svn.macports.org/repository/macports/trunk@70401 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/php/php5-xcache/Portfile
+++ b/dports/php/php5-xcache/Portfile
@@ -31,5 +31,4 @@ post-destroot {
 }
 
 livecheck.type          regex
-livecheck.url           ${homepage}wiki/ReleaseArchive
-livecheck.regex         {XCache ([0-9.]+)}
+livecheck.regex         {/Release-([0-9.]+)"}
