kdeutils4: add kdepimlibs4 to dependencies (fixes: #25993)
git-svn-id: https://svn.macports.org/repository/macports/trunk@70402 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/kde/kdeutils4/Portfile
+++ b/dports/kde/kdeutils4/Portfile
@@ -6,6 +6,7 @@ PortGroup           kde4   1.0
 
 name                kdeutils4
 version             4.4.5
+revision            1
 conflicts           kdelibs4-experimental
 categories          kde kde4
 maintainers         snc sharky
@@ -19,7 +20,7 @@ distname            kdeutils-${version}
 checksums           sha1    c092cfbb46719d89a5718735dc81ca75c0176e45 \
                     rmd160  d8f9014fcd27548a33d10138135a8789d8fd49d6
 
-depends_lib-append  port:kdelibs4 port:kdebase4-runtime \
+depends_lib-append  port:kdelibs4 port:kdepimlibs4 port:kdebase4-runtime \
                     port:libzip port:gmp port:libarchive \
                     port:qca port:qimageblitz
 
