py25-dice3ds, py26-dice3ds: update to 0.11
git-svn-id: https://svn.macports.org/repository/macports/trunk@70405 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py25-dice3ds/Portfile
+++ b/dports/python/py25-dice3ds/Portfile
@@ -5,12 +5,10 @@ PortSystem          1.0
 PortGroup           python25 1.0
 
 name                py25-dice3ds
-version             0.10
+version             0.11
 categories-append   graphics
 platforms           darwin
-if {[info exists supported_archs]} {
-    supported_archs noarch
-}
+supported_archs     noarch
 license             BSD
 maintainers         jmr openmaintainer
 description         Read, write, and manipulate 3DS files
@@ -18,13 +16,13 @@ long_description    Dice3DS is a package to to read, write, and manipulate 3D St
                     in Python. Also includes code to convert 3DS files into an OpenGL display list.
 homepage            http://www.aerojockey.com/software/dice3ds/
 
-depends_lib-append  port:py25-numpy
+depends_lib         port:py25-numpy
 
 master_sites        ${homepage}
 distname            Dice3DS-${version}
-checksums           md5 f666105b67aa0bc6feebf6d52bc4d0bd \
-                    sha1 375593ab28e0634d09e9c88112824a1a7b445c85 \
-                    rmd160 52884b6df45f0dd9e9341bb563a113decc3a48f2
+checksums           md5 7c8bdd03e98a46a82e5f5aa42c99de39 \
+                    sha1 30dea705bc28bfeb60926065ba98e1f7316a423f \
+                    rmd160 cedaa350241e56081145ade24c11c85f635df454
 
 post-destroot	{
     xinstall -m 644 -W ${worksrcpath} COPYING NEWS README THANKS TODO doc/doc.html \
