metis: added configure.cc_archflags to aid build for ppc64
git-svn-id: https://svn.macports.org/repository/macports/trunk@70406 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/math/metis/Portfile
+++ b/dports/math/metis/Portfile
@@ -41,7 +41,10 @@ configure {
 	if {[variant_isset universal]} {
 		append optflags " " ${configure.universal_cflags}
 		append ldflags " " ${configure.universal_ldflags}
-	}
+	} else {
+                append optflags " " ${configure.cc_archflags}
+		append ldflags " " ${configure.cc_archflags}
+        }
 	
 	reinplace "s|CC = .*|CC = ${configure.cc}|" ${worksrcpath}/Makefile.in
 	reinplace "s|OPTFLAGS = .*|OPTFLAGS = ${optflags}|" ${worksrcpath}/Makefile.in
