Force cmake to build with the MacPorts ncurses library rather than the MacOS X curses library by adjusting configure.env and configure.args. That should be sufficient, but a platform variant handles the forced replacement of a configuration variable. refs #25614
git-svn-id: https://svn.macports.org/repository/macports/trunk@70407 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/cmake/Portfile
+++ b/dports/devel/cmake/Portfile
@@ -6,7 +6,7 @@ PortGroup	muniversal 1.0
 
 name		cmake
 version		2.8.2
-revision	1
+revision	2
 set branch	[join [lrange [split ${version} .] 0 1] .]
 categories	devel
 maintainers	css
@@ -26,11 +26,22 @@ checksums       md5     8c967d5264657a798f22ee23976ff0d9 \
 
 depends_lib     port:libidn port:openssl
 
-configure.env   CMAKE_PREFIX_PATH=${prefix}
-configure.args	--mandir=/share/man --docdir=/share/doc/cmake --parallel=${build.jobs}
+configure.env   CMAKE_PREFIX_PATH=${prefix} \
+				CMAKE_INCLUDE_PATH=${prefix}/include/ncurses \
+				CMAKE_LIBRARY_PATH=${prefix}/lib
+
+configure.args	--mandir=/share/man --docdir=/share/doc/cmake \
+				--parallel=${build.jobs} \
+				--init=${filespath}/macports.cmake
 patchfiles	patch-CMakeFindFrameworks.cmake.diff
 post-patch {
 	reinplace "s|__PREFIX__|${prefix}|g" ${worksrcpath}/Modules/CMakeFindFrameworks.cmake
+}
+
+platform darwin {
+	post-configure {
+		reinplace "s|/usr/lib/libcurses|${prefix}/lib/libncurses|g" ${worksrcpath}/CMakeCache.txt
+	}
 }
 
 post-destroot {
