--- a/dports/aqua/qtoctave-mac/Portfile
+++ b/dports/aqua/qtoctave-mac/Portfile
@@ -1,8 +1,7 @@
 # $Id$
 PortSystem          1.0
 name                qtoctave-mac
-version             0.8.2
-revision            2
+version             0.9.1
 categories          aqua math
 platforms           darwin
 maintainers         and.damore openmaintainer
@@ -13,17 +12,22 @@ long_description    QtOctave is a front-end for Octave. Octave is a high-level l
 
 homepage            http://qtoctave.wordpress.com
 distname            qtoctave-${version}
-master_sites        http://forja.rediris.es/frs/download.php/1383/
+master_sites        http://forja.rediris.es/frs/download.php/1760/
 depends_lib         port:octave \
                     port:qt4-mac
 
 depends_build       bin:cmake:cmake
-checksums           md5 56d0d7bece168b7df6a6b30d448266f4 \
-                    sha1  d2aed8be03fb77d0f37cc72b7cd74ff7c73934dd \
-                    rmd160 18cedfecea53d4c86b46ebc8474a6e2b6ebee313
+checksums           md5     a15edc82c6780dc3764052b04bf902f0 \
+                    sha1    1d18058c7549a3f25cd648183db3d99ef755257e \
+                    rmd160  9e4725cc2a52cfe9b7ec1e1b74becba8146b74f0
 
-patchfiles          patch-cmake-list.diff
 configure.cmd       cmake
 configure.pre_args  -DCMAKE_INSTALL_PREFIX=${prefix}
 configure.args      -DQT_QMAKE_EXECUTABLE=${prefix}/libexec/qt4-mac/bin/qmake \
                     -G \"Unix Makefiles\" .
+
+use_bzip2           yes
+
+livecheck.type     regex
+livecheck.url      ${homepage}
+livecheck.regex    "QtOctave (\\d+(?:\\.\\d+)*) has been released"
