bitstream-vera: bitstream-vera does not install architecture dependent files. Fixes #25770 (maintainer timeout).
git-svn-id: https://svn.macports.org/repository/macports/trunk@70409 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/bitstream-vera/Portfile
+++ b/dports/graphics/bitstream-vera/Portfile
@@ -3,6 +3,7 @@
 PortSystem		1.0
 name			bitstream-vera
 version			1.10
+revision		1
 categories		graphics
 maintainers		mac.com:jbenninghoff
 description		Bitstream Vera Fonts for use with Freetype/Fontconfig
@@ -22,6 +23,8 @@ platforms		darwin
 checksums		md5 52559ed969e74f5fca83e527163156df
 
 patchfiles		patch-local.conf
+
+supported_archs noarch
 
 use_configure	no
 build {
