emacs: Prevent emacs from finding dbus and gconf since emacs does not depend on them.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70410 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/editors/emacs/Portfile
+++ b/dports/editors/emacs/Portfile
@@ -31,6 +31,10 @@ configure.args  --without-x \
                 --without-carbon \
                 --infodir ${prefix}/share/info/${name}
 
+configure.args-append \
+    --without-dbus \
+    --without-gconf
+
 depends_lib     port:ncurses
 
 post-destroot {
